Fixed layout of web section on mobile

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -205,6 +205,9 @@ padding-bottom: 100%;
   height: 120px;
   border-left: 0px solid #eee;
   top: 0px;
+  width: 120px;
+  background-color: #FFFFFF;
+  padding: 5px;
 }
 
 .web-section ul li {
@@ -385,12 +388,23 @@ display: block;
   .container {
     z-index: 1000;
   }
+    
+.web-section ul li {
+    margin: 0px 0 0px 0px;
+}
 
   .descriptionOuter {
-    margin: 10px 0 25px 0px;
+    margin: 10px 0 0px 0px;
     position: relative;
-    max-width: 90%;
+    width: 100%;
   }
+    
+.description {
+    margin: 0 0px 0 0px;
+    padding: 5px 10px 0px 14px;
+    height: 120px;
+    position: relative;
+}
 
   .descriptionOuter img {
     height: 120px !important;
